objects/blng__TaxIntegration__c.object
<CustomObject>
    <fields>
        <fullName>AVA_BLNG__AvaTaxAccountNumber__c</fullName>
        <label>AvaTax Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__AvaTaxLicenseKey__c</fullName>
        <label>AvaTax License Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__CustomerCode__c</fullName>
        <label>Customer Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AVA_BLNG__TaxCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA_BLNG__DocCode__c</fullName>
        <label>Doc Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AVA_BLNG__TaxCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Save_transactions_to_AvaTax__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Save transactions to AvaTax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__TestMode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Validate_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Validate Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__TaxEngine__c</fullName>
        <label>Tax Engine</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TaxEngine</valueSetName>
        </valueSet>
    </fields>
    <label>Tax Integration</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Active__c</columns>
        <columns>blng__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tax Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>